--- a/src/opentsdb.conf
+++ b/src/opentsdb.conf
@@ -32,6 +32,7 @@ tsd.core.plugin_path = /home/ewallet/soft/opentsdb/build/plugins
 # Whether or not to enable data compaction in HBase, default is True
 tsd.storage.enable_compaction = false
 tsd.storage.enable_appends = true
+tsd.storage.uid.width.tagv = 4
 
 # Name of the HBase table where data points are stored, default is "tsdb"
 tsd.storage.hbase.data_table = epay:risk-onitordb-online
